<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/password_info_text"
        style="@style/passwordInfoNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createPasswordNote" />

    <EditText
        android:id="@+id/old_password"
        style="@style/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:visibility="gone" />
    
    <EditText
        android:id="@+id/new_password"
        style="@style/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/password_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/dialogOk" />

        <Button
            android:id="@+id/password_second_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/changePassword" />
    </LinearLayout>
</LinearLayout>